# databricks_de_professional_practice

./: .gitignore  CLAUDE.md  README.md  databricks.yml  pyproject.toml
.github/workflows/: deploy-dev.yml  deploy-prod.yml  deploy-stage.yml  pr.yml
resources/: bronze_ingestion.yml  classic_pyspark.yml  databricks_de_professional_practice_etl.pipeline.yml  load_new_source_data.yml  setup_job.yml
src/classic_approach/gold/: gold_delete_customer_downstream.ipynb  gold_dim_customer.ipynb  gold_dim_date.ipynb  gold_dim_location.ipynb  gold_dim_vehicle.ipynb  gold_fact_order_fulfillment.ipynb  gold_fact_shipment_event.ipynb  gold_fact_vehicle_telemetry.ipynb
src/classic_approach/silver/batch/: silver_scd1_vehicles.ipynb  silver_shipment_events.ipynb  silver_vehicle_telemetry.ipynb  silver_vehicle_telemetry_transforms.py
src/classic_approach/silver/static/: silver_static_location_lookup.ipynb
src/classic_approach/silver/stream/: silver_dim_customers.ipynb  silver_scd2_customers.ipynb  silver_scd2_orders.ipynb
src/databricks_de_professional_practice_etl/: README.md
src/databricks_de_professional_practice_etl/transformations/: sample_trips_databricks_de_professional_practice.py  sample_zones_databricks_de_professional_practice.py
src/databricks_de_professional_practice_etl/transformations/bronce/from_json/: orders_cdc.ipynb  shipment_events.ipynb  telemetry.ipynb
src/dlt_dbx_prof_practice/: README.md
src/ingestion/from_delta/: customers.ipynb  orders.ipynb
src/ingestion/from_json/: orders.ipynb  orders_cdc.ipynb  shipment_events.ipynb  telemetry.ipynb  vehicles.ipynb
src/setup/: README.md  environment_setup.ipynb  incremental_data_generator.ipynb
src/utils/: reader_utils.py  transform_utils.py  writer_utils.py
tests/: conftest.py  sample_taxis_test.py  test_reader_utils.py  test_silver_telemetry.py  test_transform_utils.py
