[project]
name = "databricks_de_professional_practice"
version = "0.0.1"
authors = [{ name = "lucazwicky" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["F403", "F405"]
builtins = ["spark", "dbutils", "display", "sc", "table"]
